--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,18 @@
 version: '3.4'
 
 services:
+  proxy:
+    image: traefik:v2.4
+    command:
+      - "--api.insecure=true"
+      - "--providers.docker=true"
+      - "--providers.docker.exposedbydefault=false"
+      - "--entrypoints.web.address=:80"
+    ports:
+      - "80:80"
+      - "8080:8080"
+    volumes:
+      - "/var/run/docker.sock:/var/run/docker.sock:ro"
   backend:
     build:
       context: ./backend
@@ -10,6 +22,8 @@ services:
       - 8000:8000
     volumes:
       - ./backend:/code
+    labels:
+      - "traefik.enable=true"
   frontend:
     build:
       context: ./frontend
@@ -17,6 +31,10 @@ services:
     ports:
       - 8080:8080
     volumes:
-      - ./frontend:/code
+      - ./frontend/package.json:/code/package.json
+      - ./frontend/public:/code/public
+      - ./frontend/src:/code/src
+      - ./frontend/babel.config.js:/code/babel.config.js
+      - ./frontend/yarn.lock:/code/yarn.lock
     environment:
       - "NODE_ENV=development"
